<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:src="@drawable/baseline_shopping_cart_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="90dp"
        android:inputType="text"
        android:hint="@string/userName"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingEnd="20dp"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="20sp"
        IconEnd="@drawable/baseline_visibility_off_24"/>

    <Button
        android:id="@+id/enterButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="320dp"
        android:text="@string/enter"
        android:textSize="20sp"
        android:background=""
        android:layout_marginVertical="12dp"
        android:layout_height="44dp"/>

    <TextView
        android:id="@+id/registerTv"
        android:textSize="16sp"
        android:textColor=""
        android:layout_marginTop="300dp"
        android:text="@string/register"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>