<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.products.ProductDetailsFragment">

    <ImageView
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/btn_change" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/button_back" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/btn_back"
        android:layout_marginTop="1dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPager"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/price"
        android:textColor="#5458EA"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_marginTop="10dp"
        android:src="@drawable/heart"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_toEndOf="@id/heart"
        android:layout_marginStart="5dp"
        android:text="@string/like"
        android:textColor="#494949"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/likes"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/title_productDetail"
        android:textColor="#494949"
        android:textSize="18sp"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/short_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="#C0C0C0"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/detail_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/short_description"
        android:layout_marginTop="10dp"
        android:text="@string/detail_description"
        android:textColor="#494949"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_description_title"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="#C0C0C0"
        android:layout_marginStart="15dp" />


</RelativeLayout>