<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.EditProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:src="@drawable/cancel_edit_profile"
        app:layout_constraintBottom_toBottomOf="@+id/tb_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:src="@drawable/ready_exit_profile"
        app:layout_constraintBottom_toBottomOf="@+id/tb_edit_profile"
        app:layout_constraintEnd_toEndOf="@+id/tb_edit_profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:focusable="true" />

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/user_photo"
        android:background="@drawable/circle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_edit_profile" />

    <TextView
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:text="@string/choose_photo"
        android:textColor="@color/btn_valid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_photo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/view_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

            <View
                android:id="@+id/view_name"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/surname"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck,UnknownId" />

            <View
                android:id="@+id/view_surname"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/user_name"
                app:layout_constraintBottom_toTopOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_surname"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck,UnknownId" />

            <View
                android:id="@+id/view_username"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/birthday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_username"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_mail_card"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view_number"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/add_phone_number"
                android:textColor="@color/btn_valid"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/view_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck"
                android:focusable="true" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/hint"
                app:layout_constraintBottom_toTopOf="@+id/view_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_number"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>