<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/card"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageHolder"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="140dp"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_rv"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageHolder"
            android:text="@string/title_rv"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/price_rv"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_rv"
            android:text="@string/price_rv"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"/>

        <ImageView
            android:id="@+id/like_rv"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_rv"
            android:src="@drawable/greyheart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:focusable="true" />

        <ImageView
            android:id="@+id/menu_rv"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_rv"
            android:src="@drawable/dots_three_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:focusable="true" />

        <TextView
            android:id="@+id/likes_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/like_rv"
            android:text="@string/_100"
            app:layout_constraintTop_toBottomOf="@id/price_rv"
            android:textSize="13sp"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>